# libtestframework

./: .ccls  .gitignore  CMakeLists.txt  Makefile  clean.sh  compile_commands.json  test.cpp  testdb  testframeworkui
Qt/: main.cpp  main.h
Qt/Widgets/: TestFrameworkArgList.cpp  TestFrameworkTest.cpp  TestFrameworkTest.h  TestFrameworkTestArg.cpp  TestFrameworkTestArg.h  TestFrameworkTestArgList.h  TestFrameworkTestInfo.cpp  TestFrameworkTestInfo.h
Qt/Window/: MainWindow.cpp  MainWindow.h
include/: FuncGenerator.h  Generator.h  GeneratorFunc.h  GeneratorRange.h  MainWindow.h  Test.h  TestFuncCmp.h  TestFuncCmpGen.h  TestManager.h  TestSuite.h  TestWindow.h  Window.h
include/Generator/: Generator.h  GeneratorFunc.h  GeneratorRange.h
include/Gui/: ErrorWindow.h  MainWindow.h  TestWindow.h
include/Test/: TestFuncCmp.h  TestFuncCmpGen.h  TestManager.h  TestSuite.h
source/Global/: mutex.cpp
source/Loader/: LibLoader.cpp
source/Socket/: Client.cpp  Server.cpp  defines.cpp
source/Test/: Test.cpp  TestBase.cpp  TestManager.cpp
source/testframework/: TestFramework.cpp
source/utils/: Fork.cpp  SharedMemory.cpp  ThreadWrapper.cpp  biguint.cpp
src/: MainWindow.cpp  Test.cpp  TestFuncCmp.cpp  TestManager.cpp  TestSuite.cpp  Window.cpp
src/Gui/: ErrorWindow.cpp  MainWindow.cpp  TestWindow.cpp  Window.cpp
src/Test/: Test.cpp  TestManager.cpp  TestSuite.cpp
testframework/Database/: Database.cpp  Database.h  QueryResult.h
testframework/Generator/: Generator.cpp  Generator.h  GeneratorArray.cpp  GeneratorArray.h  GeneratorBuilder.h  GeneratorList.h  GeneratorRange.cpp  GeneratorRange.h
testframework/Global/: mutex.cpp  mutex.h  output.cpp  output.h
testframework/Gui/: ErrorWindow.h  MainWindow.cpp  MainWindow.h  TestWindow.cpp  TestWindow.h  Window.cpp  Window.h
testframework/Loader/: LibLoader.cpp  LibLoader.h
testframework/Socket/: Client.cpp  Client.h  Server.cpp  Server.h  defines.h
testframework/Test/: Test.cpp  Test.h  TestBase.cpp  TestBase.h  TestBuilder.h  TestFuncCmp.cpp  TestFuncCmp.h  TestFuncCmpGen.h  TestManager.cpp  TestManager.h  TestSuite.cpp  TestSuite.h
testframework/Utils/: Functions.cpp  Functions.h
testframework/testframework/: TestFramework.cpp  TestFramework.h
testframework/utils/: Fork.h  SharedMemory.h  TSVar.h  ThreadWrapper.h  biguint.cpp  biguint.h
tests/: database.cpp  generator.cpp  gui.cpp  thread.cpp
